feat: 프로젝트 초기 설정 완료 (Tailwind CSS, shadcn/ui, Material Icons, 프리텐다드 폰트)

--- a/green-reuse/package.json
+++ b/green-reuse/package.json
@@ -10,11 +10,23 @@
     "preview": "vite preview",
     "tailwind:init": "tailwindcss init -p",
     "prepare": "husky",
-    "postinstall": "node scripts/setup-local.js"
+    "postinstall": "node scripts/setup-local.js",
+    "use-node": "node -e \"const fs=require('fs');const v=fs.readFileSync('.nvmrc','utf8').trim();console.log('Node.js 버전을 ' + v + '로 설정하세요: nvm use ' + v);\"",
+    "node-version": "node scripts/use-node.js"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@fontsource/pretendard": "^5.2.5",
+    "@mui/icons-material": "^6.4.7",
+    "@mui/material": "^6.4.7",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.479.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
